--- a/notebooks/deduplicate_java_pretrain.ipynb
+++ b/notebooks/deduplicate_java_pretrain.ipynb
@@ -41,7 +41,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "from code_transformer.utils.io import save_pickled, load_pickled\n",
-    "from env import CODE2SEQ_RAW_DATA_PATH"
+    "from code_transformer.env import CODE2SEQ_RAW_DATA_PATH"
    ]
   },
   {
@@ -376,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
