--- a/notebooks/interactive_prediction.ipynb
+++ b/notebooks/interactive_prediction.ipynb
@@ -35,7 +35,7 @@
     "from code_transformer.preprocessing.pipeline.stage1 import CTStage1Preprocessor\n",
     "from code_transformer.preprocessing.pipeline.stage2 import CTStage2MultiLanguageSample\n",
     "from code_transformer.utils.inference import get_model_manager, make_batch_from_sample, decode_predicted_tokens\n",
-    "from env import DATA_PATH_STAGE_2\n",
+    "from code_transformer.env import DATA_PATH_STAGE_2\n",
     "\n",
     "%reload_ext autoreload\n",
     "%autoreload 2"
@@ -410,13 +410,20 @@
     "    predicted_method_name = decode_predicted_tokens(prediction, batch, data_manager)\n",
     "    print(f\"  ({i + 1}) \", ' '.join(predicted_method_name))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:code-parser]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-code-parser-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -428,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
