Add example for obtaining code snippet embeddings

--- a/notebooks/interactive_prediction.ipynb
+++ b/notebooks/interactive_prediction.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "model_type = 'code_transformer'  # code_transformer, great or xl_net\n",
-    "run_id = 'CT-19'  # Name of folder in which snapshots are stored\n",
+    "run_id = 'CT-6'  # Name of folder in which snapshots are stored\n",
     "snapshot = 'latest'  # Use 'latest' for the last stored snapshot"
    ]
   },
@@ -412,11 +412,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.1. Code Snippet embedding\n",
+    "In order to obtain a meaningful embedding of the provided AST/Source code pair, one can use the Query Stream Embedding of the masked method name token in the final encoder layer."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "encoder_output = model.lm_encoder.forward_batch(batch, need_all_embeddings=True)\n",
+    "query_stream_embedding = encoder_output.all_emb[-1][1]  # [1, B, D]"
+   ]
   }
  ],
  "metadata": {
