--- a/notebooks/interactive_prediction.ipynb
+++ b/notebooks/interactive_prediction.ipynb
@@ -416,7 +416,18 @@
    "metadata": {},
    "source": [
     "## 4.1. Code Snippet embedding\n",
-    "In order to obtain a meaningful embedding of the provided AST/Source code pair, one can use the Query Stream Embedding of the masked method name token in the final encoder layer."
+    "In order to obtain a meaningful embedding of the provided AST/Source code pair, one can use the Query Stream Embedding of the masked method name token in the final encoder layer.\n",
+    "The structure of `encoder_output.all_emb` is as follows:\n",
+    "```yaml\n",
+    " ├── input_embeddings\n",
+    " ├── layer_1\n",
+    " |    ├── content_stream_embeddings  # [SEQ_LEN, B, D]\n",
+    " |    └── query_stream_embeddings    # [1, B, D]\n",
+    " ⋮\n",
+    " └── layer_n\n",
+    "      ├── content_stream_embeddings  # [SEQ_LEN, B, D]\n",
+    "      └── query_stream_embeddings    # [1, B, D]\n",
+    "```"
    ]
   },
   {
@@ -432,9 +443,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:code-parser]",
+   "display_name": "Python [conda env:code-transformer] *",
    "language": "python",
-   "name": "conda-env-code-parser-py"
+   "name": "conda-env-code-transformer-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -446,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
